--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -14,6 +14,10 @@
   <div><%= f.label :title %><br />
   <%= f.text_field :title %></div>
 
+
+  <div><%= f.label :image %><br />
+  <%= f.file_field :image %></div>
+
   <div><%= f.label :ISBN %><br />
   <%= f.text_field :ISBN %></div>
 
