--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,11 @@
       <div id='profPic' style = "width: 45px; height: 45px; display: inline-block">
         <%= image_tag current_user.image? ? current_user.image.url(:thumb) : "profPic.png", { class: 'img-circle', style: 'position: absolute; height: inherit;'} %>
       </div>
-      <h3 id = 'name' class="inlineb"> Hi <%= current_user.firstName %>!</h3>
+      <h3 id = 'name' class="inlineb"> Hi <%= current_user.firstName %>!
+      <%if current_user.admin? %>
+        (Admin)
+      <%end%>
+      </h3>
 
       <div class = "dropdown inlineb" style="display: inline-block;" id="gear" >
           <span id = "logOut" class = "glyphicon glyphicon-log-out" data-toggle="dropdown"></span>
@@ -62,10 +66,15 @@
   </div>
 <%end%>
 
+<% if notice%>
+<div class="page-notice">
+  <%=notice%>
+</div>
+<%end%>
 
-
-
-
+<script type="text/javascript">
+  $(".page-notice").fadeOut( 3000, "linear");
+</script>
 
 <%= yield %>
 
