--- a/app/assets/stylesheets/login.css.scss
+++ b/app/assets/stylesheets/login.css.scss
@@ -1,3 +1,6 @@
+.my-page-header{
+	margin-left: 10px;
+}
 .login-all{
 	width: 100%;
 	height: 100%;
@@ -197,4 +200,56 @@
 	width: 400px;
 	border-radius:10px;
 	padding: 5px;
+}
+
+.catalogue-container{
+
+}
+.catalogue-ele{
+	width: 400px;
+	border-radius: 10px;
+	border: 1px solid black;
+	vertical-align: top;
+	margin: 10px;
+	.ele-image{
+		height: 150px;
+		width: 120px;
+		margin: 15px;
+	}
+	.catalogue-ele-details{
+		vertical-align: top;
+		margin: 15px;
+		margin-left: 0px;
+		font-size: 17px;
+		width: 225px;
+		.ele-title{
+			font-size: 25px;
+			font-weight: bold;
+			margin-bottom: 10px;
+		}
+		.ele-authors{
+			margin-bottom: 10px;
+			.ele-author{
+
+			}
+		}
+		.ele-publishers{
+			margin-bottom: 10px;
+		}
+		.ele-tags{
+			margin-bottom: 10px;
+			.ele-tag{
+
+			}
+		}
+		.ele-more{
+			margin-bottom: 10px;
+		}
+		.ele-isbn{
+			margin-bottom: 10px;
+		}
+		.ele-desc{
+			margin-bottom: 10px;
+		}
+	}
 }
