--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,28 @@
 <p id="notice"><%= notice %></p>
+<div class="catalogue-ele">
+  
+</div>
+<div><img class="ele-image" src="<%= @book.image.url%>" alt="Smiley face" height="42" ></div>
+<div class="catalogue-ele-details inlineb">
+  <div class="ele-title">Title: <%= @book.title%></div>
+  <div class="ele-authors">Author(s):
+  <%for auth in @book.authors%>
+    <div class="ele-author inlineb">
+      <%=auth.firstName%>
+      <%=auth.lastName%>
+    </div>
+  <%end%></div>
+  <div class="ele-publishers">Publisher: <%= @book.publisher%></div>
+  <div class="ele-isbn">ISBN: <%= @book.ISBN%></div>
+  <div class="ele-desc">Description: <%= @book.description%></div>
+  <div class="ele-tags">Tags:
+  <%for tag in @book.tags%>
+    <div class="ele-tag inlineb">
+      <%=tag.name%>
+    </div>
+  <%end%></div>
 
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+  <%= link_to 'Edit', edit_book_path(@book) %> |
+  <%= link_to 'Back', books_path %>
+</div>
+
