search to catalogue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
   <div class="nav-headers inlineb">
 
     <%= link_to "My Home Page", myLibrary_home_index_path, :class => "btn btn-default nav-header"  %>
-    <%= link_to "Search", search_home_index_path, :class => "btn btn-default nav-header"  %>
+    <%= link_to "Search", catalogue_home_index_path, :class => "btn btn-default nav-header"  %>
     <%= link_to "Forums", forums_home_index_path, :class => "btn btn-default nav-header"  %>
     <%= link_to "Manage Orders", manageOrder_home_index_path, :class => "btn btn-default nav-header"  %>
   </div>
