--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Listing orders</h1>
 
+<%= link_to 'New Order', new_order_path, :class => "btn btn-default index-new-button" %>
+
+
 <table class="table  table-bordered">
   <thead>
     <tr>
@@ -37,4 +40,3 @@
 
 <br>
 
-<%= link_to 'New Order', new_order_path %>
