--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -29,11 +29,14 @@
   <tbody>
     <% @comments.each do |comment| %>
       <tr>
-        <td><%= comment.user.fullName%></td>
+        <td><%= comment.user_id%> - <%=comment.user.fullName%></td>
         <td><%= comment.forum.title+" by "+comment.forum.user.fullName%></td>
         <td><%= comment.content%></td>
         <td>
           <div class="libraryUsers">
+            <div>
+              <%= comment.likes.count%> like(s)
+            </div>
             <% for like in comment.likes%>
               <div>
                 <%= like.user.fullName%>
@@ -50,7 +53,7 @@
             <%= f.submit("Add") %>
           <% end %>
         </td>
-        <td><%= link_to 'Show', comment %>
+        <td>
         <%= link_to 'Edit', edit_comment_path(comment) %>
         <%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
