--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Listing libraries</h1>
 
+<%= link_to 'New Library', new_library_path, :class => "btn btn-default index-new-button"  %>
+
+
 <table class="table  table-bordered">
   <thead>
     <tr>
@@ -12,12 +15,12 @@
   <tbody>
     <% @libraries.each do |library| %>
       <tr>
-        <td><%= library.user_id%></td>
-        <td><%= library.book_id%></td>
+        <td><%= library.user_id%> - <%=library.user.fullName%></td>
+        <td><%= library.book_id%> - <%=library.book.title%> (ISBN: <%=library.book.ISBN%>)</td>
         <td><%= library.description%></td>
-        <td><%= link_to 'Show', library %></td>
-        <td><%= link_to 'Edit', edit_library_path(library) %></td>
-        <td><%= link_to 'Destroy', library, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+        <%= link_to 'Edit', edit_library_path(library) %>
+        <%= link_to 'Destroy', library, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -25,4 +28,3 @@
 
 <br>
 
-<%= link_to 'New Library', new_library_path %>
