--- a/app/views/referencedbooks/_form.html.erb
+++ b/app/views/referencedbooks/_form.html.erb
@@ -12,6 +12,14 @@
   <% end %>
 
   <div class="actions">
+    <div><%= f.label :user_id %><br />
+      <%= f.select("user_id", User.all.collect {|p| [ p.fullName, p.id ] }, { include_blank: false }) %></div>
+
+    <div><%= f.label :book_id %><br />
+    <%= f.select("book_id", Book.all.collect {|p| [ p.title+"- ISBN: "+p.ISBN, p.id ] }, { include_blank: false }) %></div>
+
+    <div><%= f.label :forum_id %><br />
+    <%= f.select("forum_id", Forum.all.collect {|p| [ p.title+" by "+p.user.fullName, p.id ] }, { include_blank: false }) %></div>
     <%= f.submit %>
   </div>
 <% end %>
