--- a/app/views/trackers/index.html.erb
+++ b/app/views/trackers/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Listing trackers</h1>
+<%= link_to 'New Tracker', new_tracker_path, :class => "btn btn-default index-new-button" %>
 
 <table class="table">
   <thead>
@@ -27,4 +28,3 @@
 
 <br>
 
-<%= link_to 'New Tracker', new_tracker_path %>
